@@ -10,6 +10,7 @@ from MDAnalysis.analysis.rms import RMSD, RMSF
 from MDAnalysis.analysis.dihedrals import Dihedral, Ramachandran, Janin
 from MDAnalysis.analysis.bat import BAT
 from MDAnalysis.analysis.gnm import GNMAnalysis
+from MDAnalysis.analysis.dssp.dssp import DSSP
 from MDAnalysis.analysis.hydrogenbonds.hbond_analysis import (
     HydrogenBondAnalysis,
 )
@@ -127,6 +128,14 @@ def client_GNMAnalysis(request):
 def client_BAT(request):
     return request.param
 
+
+# MDAnalysis.analysis.dssp.dssp
+
+@pytest.fixture(scope="module", params=params_for_cls(DSSP))
+def client_DSSP(request):
+    return request.param
+
+  
 # MDAnalysis.analysis.hydrogenbonds
   
 @pytest.fixture(scope='module', params=params_for_cls(HydrogenBondAnalysis))
